<resources>
    <string name="app_name">KotInv</string>
    <string name="inventory">Inventory</string>
    <string name="purge">Purge</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="add">Add</string>
    <string name="header">Header</string>
    <string name="textview">TextView</string>
    <string name="_0">0</string>
    <string name="sub">-</string>
    <string name="add_symbol">+</string>
    <string name="item">Item</string>
    <string name="title_activity_list">ListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="addSymbol">+</string>
    <string name="memo">Memo</string>
    <string name="delete">delete</string>
</resources>