<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/footItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:autofillHints="Item Name"
            android:background="@null"
            android:hint="@string/enter_item_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:labelFor="@+id/footItemName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#3C3C3C"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/footMemo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="Item Name"
            android:background="@null"
            android:hint="@string/memo"
            android:importantForAutofill="no"
            android:inputType="text"
            android:labelFor="@+id/footMemo"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#3C3C3C"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/addsubLayer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp">

            <Button
                android:id="@+id/footSubBtn"
                android:width="48dp"
                android:height="48dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:minWidth="48dp"
                android:text="@string/sub" />

            <TextView
                android:id="@+id/footAmt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:gravity="center"
                android:maxWidth="48dp"
                android:minWidth="15dp"
                android:minHeight="48dp"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textColorHint="#3C3C3C"
                android:textSize="18sp" />

            <Button
                android:id="@+id/footAddBtn"
                android:width="48dp"
                android:height="48dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="70dp"
                android:minWidth="48dp"
                android:text="@string/add_symbol" />

        </LinearLayout>

        <Button
            android:id="@+id/bttmAddBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/item"
            android:minHeight="48dp"
            android:text="@string/add"
            android:textAllCaps="false"
            android:layout_marginBottom="30dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>