<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemView">

    <TextView
        android:id="@+id/itemHeader"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="21dp"
        android:text="@string/header"
        android:textAlignment="center"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/inventory_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inventory_container"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/noteView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/itemHeader"
        app:layout_constraintTop_toBottomOf="@+id/itemHeader">

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#F44336"
            android:text="@string/add_symbol"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemAmt"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/addButton"
            app:layout_constraintStart_toEndOf="@+id/subtractBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/subtractBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#F44336"
            android:text="@string/sub"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/noteView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="25dp"
        android:paddingTop="25dp"
        android:paddingEnd="25dp"
        android:paddingBottom="25dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inventory_container" />
</androidx.constraintlayout.widget.ConstraintLayout>